dfir_rs/tests/snapshots/surface_reduce__reduce@graphvis_dot.snap
---
source: hydroflow/tests/surface_reduce.rs
expression: "df.meta_graph().unwrap().to_dot(&Default::default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) map(|v| (v, ()))", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) source_iter(vec![0])", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) join()", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) map(|(_src, ((), dst))| dst)", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) tee()", shape=house, fillcolor="#ffff88"]
    n7v1 [label="(n7v1) source_stream(pairs_recv)", shape=invhouse, fillcolor="#88aaff"]
    n8v1 [label="(n8v1) reduce(|a: &mut _, b| *a += b)", shape=invhouse, fillcolor="#88aaff"]
    n9v1 [label="(n9v1) for_each(|sum| println!(\"{}\", sum))", shape=house, fillcolor="#ffff88"]
    n10v1 [label="(n10v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n11v1 [label="(n11v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n1v1 -> n2v1
    n3v1 -> n1v1 [label="0"]
    n5v1 -> n6v1
    n4v1 -> n5v1
    n2v1 -> n4v1 [label="0"]
    n7v1 -> n4v1 [label="1"]
    n6v1 -> n10v1 [label="0"]
    n8v1 -> n9v1
    n6v1 -> n11v1 [label="1"]
    n10v1 -> n1v1 [label="1"]
    n11v1 -> n8v1 [color=red]
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n10v1
        n3v1
        n1v1
        n2v1
        n7v1
        n4v1
        n5v1
        n6v1
        subgraph "cluster_sg_1v1_var_my_join_tee" {
            label="var my_join_tee"
            n4v1
            n5v1
            n6v1
        }
        subgraph "cluster_sg_1v1_var_reached_vertices" {
            label="var reached_vertices"
            n1v1
            n2v1
        }
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 1"
        n8v1
        n9v1
    }
}

